# Socket-Project

./: CMakeLists.txt  Clamav_agent.cpp  Clamav_agent.h  Doc.docx  FTPClient.cpp  FTPClient.h  FTP_Client_ClamAV_Report.docx  README.md  Socket Project.sln  Socket Project.vcxproj  Socket Project.vcxproj.filters  Testketnoi.txt  main.cpp  main_clamav.cpp
Report/: hcmus-report-template.sty  main.tex
Report/content/: info.tex  intro.tex  problem.tex  screenshot.tex  title.tex
